--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/halloween1.jpg
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
