--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.1.2
   firebase_storage: ^11.0.5
   firebase_core: ^2.2.0
+  fluttertoast: ^8.1.1
 
 
 dev_dependencies:
